Add wheel option, universal
Signed-off-by: Deokgyu Yang <secugyu@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,6 @@ url= https://github.com/hardkernel/WiringPi2-Python
 description= A Port of WiringPi Python project for ODROID boards
 long_description = file:README.rst
 license = LGPL
+
+[bdist_wheel]
+universal = 1
